# policy-eval-mcp

./: .gitignore  README.md  docker-compose.yml  requirements.txt  streamlit_ui.py
configs/: config_job.yaml
data/: evaluation_criteria.json
mcp-server-qdrant/: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
mcp-server-qdrant/.github/workflows/: pre-commit.yaml  pypi-publish.yaml  pytest.yaml
mcp-server-qdrant/src/mcp_server_qdrant/: main.py  mcp_server.py  qdrant.py  server.py  settings.py
mcp-server-qdrant/src/mcp_server_qdrant/common/: func_tools.py
mcp-server-qdrant/src/mcp_server_qdrant/embeddings/: base.py  factory.py  fastembed.py  types.py
mcp-server-qdrant/tests/: __init__.py  test_fastembed_integration.py  test_qdrant_integration.py  test_settings.py
results/: KISA_structured_cross_reference.json  KISA_structured_cross_reference.jsonl  cross_reference.json  eval_20250624_135040.jsonl  eval_20250624_141922.jsonl  eval_20250624_142549.jsonl  eval_20250624_151939.jsonl  eval_20250624_152952.jsonl  eval_20250624_153612.jsonl  eval_20250624_165853.jsonl  eval_20250624_175253.jsonl  eval_20250624_175255_llm.jsonl  eval_20250625_094851.jsonl  eval_20250625_095347.jsonl  eval_20250625_095348.jsonl  eval_20250625_095359.jsonl  eval_20250625_104025.jsonl  eval_20250625_104530.jsonl  eval_20250625_104852.jsonl  eval_20250625_105830.jsonl  eval_20250625_105833.jsonl  eval_result.jsonl  naver_eval_result.jsonl  naver_policy_structured_cross_reference.json  naver_policy_structured_cross_reference.jsonl  policy_structured_cross_reference.jsonl  (+1 more)
(+23 files in other folders)
